# hypercompress

./: .gitignore  COMPRESSION_PLAN.md  LICENSE  QUICKSTART.md  README.md  Taskfile.yml  pyproject.toml
.artifacts/checkpoints/: default-run.pt  quick-test.pt  sample-hybrid.pt
.artifacts/checkpoints/fast-dev-test/: config.json
configs/: default.yaml  hf_12b.yaml  hf_example_public.yaml  hf_fast_dev.yaml  sample_hybrid.yaml
docs/: 1000xplaybook.md  README.md  hypercompression-fixed.md  pipeline-architecture.md
scripts/: quick_test.py  run_12b_example.bat  run_12b_example.sh  run_hf_example_public.bat  run_hf_example_public.sh  run_hf_pipeline.py  run_pipeline.py
src/distilled_kv/: __init__.py  config.py  logging.py  pipeline.py  types.py
src/distilled_kv/analysis/: report.py
src/distilled_kv/distillation/: distiller.py
src/distilled_kv/evaluation/: suite.py
src/distilled_kv/finetune/: loop.py
src/distilled_kv/modules/: base.py  blt.py  kv_distill.py  lra.py  merge.py  sparsity.py
src/distilled_kv/storage/: manager.py
src/distilled_kv/structural/: __init__.py  compact.py  embedding.py
src/distilled_kv/utils/: checkpoints.py  data.py  hf_loader.py  metrics.py  model_stats.py  models.py  rank_estimation.py
tests/: test_compression_summary.py  test_config.py  test_pipeline.py
