[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hypercompress"
version = "0.1.0"
description = "Extreme-scale neural network compression toolkit targeting 1000x effective reduction"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Hypercompress Contributors" }
]
keywords = [
  "compression",
  "distillation",
  "lora",
  "transformers",
  "kv-cache",
  "low-rank"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
  "accelerate>=0.34",
  "dataclasses-json>=0.6",
  "jinja2>=3.1",
  "numpy>=1.26",
  "pandas>=2.1",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "rich>=13.7",
  "scipy>=1.11",
  "torch>=2.2",
  "transformers>=4.44",
  "typer[all]>=0.12"
]

[project.optional-dependencies]
dev = [
  "black>=24.3",
  "isort>=5.13",
  "mypy>=1.10",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.5"
]

[project.urls]
Homepage = "https://github.com/open-source/hypercompress"
Documentation = "https://github.com/open-source/hypercompress/tree/main/docs"
"Bug Tracker" = "https://github.com/open-source/hypercompress/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --disable-warnings"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = false

[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E", "F", "I", "B", "UP", "N", "PL", "RUF"]
ignore = ["N812", "N803"]

[tool.ruff.per-file-ignores]
"tests/*" = ["D"]

